# baccarat-predictor

./: Dockerfile
.devcontainer/: devcontainer.json
BaccaratPredictor/BaccaratPredictor/: README.md  app.py  auth_ui.py  baccarat_predictor.py  firebase_utils.py  pyproject.toml  streamlit_requirements.txt  utils.py
BaccaratPredictor/BaccaratPredictor/attached_assets/: Pasted-import-streamlit-as-st-import-numpy-as-np-import-pandas-as-pd-import-time-from-baccarat-predictor-im-1746111105005.txt
