[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.45.0",
    "cryptography>=44.0.2",
    "google-cloud-firestore>=2.20.2",
    "streamlit-extras>=0.6.0",
    "firebase-admin>=6.8.0",
    "google-auth-oauthlib>=1.2.2",
    "pytz>=2025.2",
]
